--- a/PersonalBlogWebsite/html/index.html
+++ b/PersonalBlogWebsite/html/index.html
@@ -11,7 +11,7 @@
 				<h1>The Futuramist</h1>
 			</div>
 			<div class="topnav" id="navbox">
-				<a href="homepage.html" class="active">Home</a>
+				<a href="index.html" class="active">Home</a>
 				<a href="blogpost.html">Posts</a>
 			</div>
 		</div>
